[gd_scene load_steps=4 format=3 uid="uid://dvflcr0ijqkso"]

[ext_resource type="Script" uid="uid://d4iem0ngy1nxb" path="res://scenes/score/score.gd" id="1_3auxm"]
[ext_resource type="FontFile" uid="uid://1pfw0gjrb6ge" path="res://assets/fonts/Emulogic-zrEw.ttf" id="2_27w82"]
[ext_resource type="AudioStream" uid="uid://eetplm4shof2" path="res://assets/sfx/point.mp3" id="2_juhlf"]

[node name="Score" type="Node2D"]
z_index = 1
script = ExtResource("1_3auxm")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
texture_filter = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -263.0
offset_top = -3.0
offset_bottom = 43.0
grow_horizontal = 0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("2_27w82")
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "[color=#dbdbdb]HI 000000[/color] 000000"
horizontal_alignment = 2

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1

[node name="AnimationTimer" type="Timer" parent="."]
wait_time = 0.3

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_juhlf")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="AnimationTimer" to="." method="_on_animation_timer_timeout"]
